<resources>
  <string name="app_name">QLogger</string>
  <string name="version">1.0.0</string>
  <string name="admob_pub_id">a14f4ad1d26fd23</string>
  <string name="menu_logcat">Logcat</string>
  <string name="menu_prev">Previous Page</string>
  <string name="menu_next">Next Page</string>
  <string name="menu_send">Send</string>
  <string name="menu_clear">Clear</string>
  <string name="menu_setting">Settings</string>
  <string name="menu_reload">Reload</string>
  <string name="copyright">\nCopyright(C) 2012 QSDN,Inc. \nCopyright(C) 2012 A.Konno\nAll rights reserved.</string>
  <string name="about__description">This is an useless, simple, stupid, and a little log viewer, so typical.
  If you want more detailed or more powerful log viewer, please use the other.
  But in environments without adb, you may be able to use this application as a basic tool during a small development.\n
     \n
     Features:\n
     1) Logcat viewer.\n
     2) Record auto/manual reboot .\n
     3) Record error (stack trace and so on).\n
     4) Record battery utilization.\n
     5) Record On/Off time.\n
     6) Record load average.\n
     7) Record cpu utilization.\n
     8) Record mem utilization.\n
     9) Record network utilization.\n
     10) View above in graph.\n
     11) Send above data as an attached zipped file.(NEED SDCARD)\n
     \n
     Credits:\n
     1) DB icon\n
     By: http://www.addictedtocoffee.de/\n
     License: Free for commercial use (Include link to package)\n
     \n
     2) aChartEngine\n
     By: http://code.google.com/p/achartengine/\n
     License: Apache Software License 2.0\n
     \n
     3) NumberPicker\n
     By: Mike Novak(http://www.quietlycoding.com/?p=5)\n
     License: Apache Software License 2.0\n
     \n
     4) ColorPicker\n
     By: Android Open Source Project ( in examples )\n
     License: Apache Software License 2.0\n
     \n
     5) DialogPreference\n
     By: IoriAYANE(http://code.google.com/p/relog/)\n
     License: Apache Software License 2.0\n
     \n
     6) ps code\n
     By: Android Project\n
     License: BSD\n
     \n
     License:
     Released under the Apache Software License 2.0.\n
     \n
     Source Code:
     https://github.com/atkonn/qlogger\n
     or\n
     https://gitorious.org/qlogger\n
     </string>
  <string name="about__button_ok">OK</string>
  <string name="about__text_of_title">About this application</string>
  <string name="logcat_setting__title">Logcat Settings</string>
  <string name="logcat_setting__ok_button">Close</string>
  <string name="logcat_setting__title_pref">Logcat Settings</string>
  <string name="logcat_setting__title_color_setting">Logcat Color Settings</string>
  <string name="logcat_setting__summary_color_setting">logcat colors settings</string>
  <string name="logcat_setting__title_filter_setting">Logcat Filter Settings</string>
  <string name="logcat_setting__summary_filter_setting">logcat filter settings</string>
  <string name="logcat_setting__key_pref_fatal_color">logcat_setting__key_pref_fatal_color</string>
  <string name="logcat_setting__title_pref_fatal_color">Fatal LOG Color</string>
  <string name="logcat_setting__summary_pref_fatal_color">change color of fatallog(now: %06x)</string>
  <string name="logcat_setting__message_pref_fatal_color">Please pick a new color of fatallog</string>
  <string name="logcat_setting__key_pref_error_color">logcat_setting__key_pref_error_color</string>
  <string name="logcat_setting__title_pref_error_color">Error LOG Color</string>
  <string name="logcat_setting__summary_pref_error_color">change color of errorlog(now: %06x)</string>
  <string name="logcat_setting__message_pref_error_color">Please pick a new color of errorlog</string>
  <string name="logcat_setting__key_pref_warning_color">logcat_setting__key_pref_warning_color</string>
  <string name="logcat_setting__title_pref_warning_color">Warning LOG Color</string>
  <string name="logcat_setting__summary_pref_warning_color">change color of warning log(now: %06x)</string>
  <string name="logcat_setting__message_pref_warning_color">Please pick a new color of warninglog</string>
  <string name="logcat_setting__key_pref_info_color">logcat_setting__key_pref_info_color</string>
  <string name="logcat_setting__title_pref_info_color">Info LOG Color</string>
  <string name="logcat_setting__summary_pref_info_color">change color of information log(now: %06x)</string>
  <string name="logcat_setting__message_pref_info_color">Please pick a new color of infolog</string>
  <string name="logcat_setting__key_pref_verbose_color">logcat_setting__key_pref_verbose_color</string>
  <string name="logcat_setting__title_pref_verbose_color">Verbose LOG Color</string>
  <string name="logcat_setting__summary_pref_verbose_color">change color of verbose log(now: %06x)</string>
  <string name="logcat_setting__message_pref_verbose_color">Please pick a new color of verboselog</string>
  <string name="logcat_setting__key_pref_debug_color">logcat_setting__key_pref_debug_color</string>
  <string name="logcat_setting__title_pref_debug_color">Debug LOG Color</string>
  <string name="logcat_setting__summary_pref_debug_color">change color of debug log(now: %06x)</string>
  <string name="logcat_setting__message_pref_debug_color">Please pick a new color of debuglog</string>
  <string name="logcat_setting__title_buffer_size">Buffer Size</string>
  <string name="logcat_setting__summary_buffer_size">Buffer size of logcat</string>
  <string name="logcat_setting__key_pref_buffer_size">logcat_setting__key_pref_buffer_size</string>
  <string name="logcat_setting__title_pref_buffer_size">Buffer Size</string>
  <string name="logcat_setting__summary_pref_buffer_size">Setup Buffer Size(now: %d)</string>
  <string name="logcat_setting__message_pref_buffer_size">Please input a new Buffer Size</string>
  <string name="logcat_filter__keyword_label">Keyword</string>
  <string name="logcat_filter__keyword_input_hint">Please input a keyword(regex etc...)</string>
  <string name="logcat__notfound_label">Not Found</string>
  <string name="logcat_filter__loglevel_label">Log Level</string>
  <string name="logcat_setting__key_pref_filter_loglevel">logcat_setting__key_pref_filter_loglevel</string>
  <string name="logcat_setting__title_pref_filter_loglevel">Log LEVEL</string>
  <string name="logcat_setting__summary_pref_filter_loglevel">Log LEVEL</string>
  <string name="logcat_setting__dialog_title_pref_filter_loglevel">Log LEVEL</string>
  <string name="logcat_setting__key_pref_filter_keyword">logcat_setting__key_pref_filter_keyword</string>
  <string name="logcat_setting__title_pref_filter_keyword">Filter Keyword</string>
  <string name="logcat_setting__summary_pref_filter_keyword">Filter Keyword</string>
  <string name="logcat_setting__dialog_title_pref_filter_keyword">Filter Keyword</string>
  <string name="logcat_setting__message_pref_filter_keyword">Filter Keyword ( You may use regex expression )</string>
  <string name="rebootlog__title_of_delete_dialog">Delete Confirmation</string>
  <string name="rebootlog__message_of_delete_dialog">Delete all. Are you sure?</string>
  <string name="rebootlog__button_of_delete_dialog_positive">OK</string>
  <string name="rebootlog__button_of_delete_dialog_negative">cancel</string>
  <string name="rebootlog__message_of_delete_completion">%d has been deleted.</string>
  <string name="rebootlog__text_of_title">RebootLog</string>
  <string name="logcat__text_of_title">Logcat</string>
  <string name="errorlog__text_of_title">ErrorLog</string>
  <string name="errorlog__title_of_delete_dialog">Delete Confirmation</string>
  <string name="errorlog__message_of_delete_dialog">Delete all. Are you sure?</string>
  <string name="errorlog__button_of_delete_dialog_positive">OK</string>
  <string name="errorlog__button_of_delete_dialog_negative">cancel</string>
  <string name="errorlog__message_of_delete_completion">%d has been deleted.</string>
  <string name="errorlog_detail__label_of_timestamp">Time</string>
  <string name="errorlog_detail__label_of_tag">TAG</string>
  <string name="errorlog_detail__label_of_message">message</string>
  <string name="errorlog_detail__label_of_stacktrace">StackTrace</string>
  <string name="errorlog_detail__text_of_title">Detail of ErrorLog</string>
  <string name="errorlog_setting__ok_button">Close</string>
  <string name="errorlog_setting__title">ErrorLog Settings</string>
  <string name="errorlog_setting__title_pref">ErrorLog Settings</string>
  <string name="errorlog_setting__key_pref_retention_period">errorlog_setting__key_pref_retention_period</string>
  <string name="errorlog_setting__title_pref_retention_period">Retention Period</string>
  <string name="rebootlog_setting__key_pref_retention_period">rebootlog_setting__key_pref_retention_period</string>
  <string name="rebootlog_setting__key_pref_notification">rebootlog_setting__key_pref_notification</string>
  <string name="rebootlog_setting__title_pref_notification">Reboot Notification Setting</string>
  <string name="rebootlog_setting__summary_on_pref_notification">Reboot Notification is ON</string>
  <string name="rebootlog_setting__summary_off_pref_notification">Reboot Notification is OFF</string>
  <string name="rebootlog_setting__title_pref">RebootLog Settings</string>
  <string name="rebootlog_setting__title_pref_retention_period">Retention Period</string>
  <string name="rebootlog_setting__summary_pref_retention_period">Currently, the retention period is set to %d days.</string>
  <string name="rebootlog_setting__message_pref_retention_period">After a period of retention, RebootLog will be automatically deleted.</string>
  <string name="screenhourlylog_setting__key_pref_retention_period">screenhourlylog_setting__key_pref_retention_period</string>
  <string name="screenhourlylog_setting__title_pref_retention_period">Screen Hourly Log Retention Period</string>
  <string name="screenhourlylog_setting__summary_pref_retention_period">Currently, the retention period is set to %d days.</string>
  <string name="screenhourlylog_setting__message_pref_retention_period">After a period of retention, Screen Hourly Log will be automatically deleted.</string>
  <string name="screenlog_setting__title_pref">ScreenLog Settings</string>
  <string name="screenlog_setting__key_pref_retention_period">screenlog_setting__key_pref_retention_period</string>
  <string name="screenlog_setting__title_pref_retention_period">Screen Raw Log Retention Period</string>
  <string name="screenlog_setting__summary_pref_retention_period">Currently, the retention period is set to %d days.</string>
  <string name="screenlog_setting__message_pref_retention_period">After a period of retention, Screen Raw Log will be automatically deleted.</string>
  <string name="screendailylog_setting__key_pref_retention_period">screendailylog_setting__key_pref_retention_period</string>
  <string name="screendailylog_setting__title_pref_retention_period">Screen Daily Log Retention Period</string>
  <string name="screendailylog_setting__summary_pref_retention_period">Currently, the retention period is set to %d days.</string>
  <string name="screendailylog_setting__message_pref_retention_period">After a period of retention, Screen Daily Log will be automatically deleted.</string>
  <string name="screenmonthlylog_setting__key_pref_retention_period">screenmonthlylog_setting__key_pref_retention_period</string>
  <string name="screenmonthlylog_setting__title_pref_retention_period">Screen Monthly Log Retention Period</string>
  <string name="screenmonthlylog_setting__summary_pref_retention_period">Currently, the retention period is set to %d years.</string>
  <string name="screenmonthlylog_setting__message_pref_retention_period">After a period of retention, Screen Monthly Log will be automatically deleted.</string>
  <string name="memutilizationlog__row_total">Total</string>
  <string name="memutilizationlog__row_free">Free</string>
  <string name="memutilizationlog__row_cache">Cache</string>
</resources>