<?xml version="1.0" encoding="utf-8" ?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
    android:title="@string/logcat_setting__title_color_setting">
    <jp.co.qsdn.android.qlogger.view.prefs.ColorPickerPreference
      android:key="@string/logcat_setting__key_pref_fatal_color"
      android:title="@string/logcat_setting__title_pref_fatal_color"
      android:summary="@string/logcat_setting__summary_pref_fatal_color"
      android:dialogTitle="@string/logcat_setting__title_pref_fatal_color"
      android:dialogMessage="@string/logcat_setting__message_pref_fatal_color"
      defaultColor="#FF0000"
    />
    <jp.co.qsdn.android.qlogger.view.prefs.ColorPickerPreference
      android:key="@string/logcat_setting__key_pref_error_color"
      android:title="@string/logcat_setting__title_pref_error_color"
      android:summary="@string/logcat_setting__summary_pref_error_color"
      android:dialogTitle="@string/logcat_setting__title_pref_error_color"
      android:dialogMessage="@string/logcat_setting__message_pref_error_color"
      defaultColor="#FF0000"
    />
    <jp.co.qsdn.android.qlogger.view.prefs.ColorPickerPreference
      android:key="@string/logcat_setting__key_pref_warning_color"
      android:title="@string/logcat_setting__title_pref_warning_color"
      android:summary="@string/logcat_setting__summary_pref_warning_color"
      android:dialogTitle="@string/logcat_setting__title_pref_warning_color"
      android:dialogMessage="@string/logcat_setting__message_pref_warning_color"
      defaultColor="#bcb607"
    />
    <jp.co.qsdn.android.qlogger.view.prefs.ColorPickerPreference
      android:key="@string/logcat_setting__key_pref_info_color"
      android:title="@string/logcat_setting__title_pref_info_color"
      android:summary="@string/logcat_setting__summary_pref_info_color"
      android:dialogTitle="@string/logcat_setting__title_pref_info_color"
      android:dialogMessage="@string/logcat_setting__message_pref_info_color"
      defaultColor="#ffffff"
    />
    <jp.co.qsdn.android.qlogger.view.prefs.ColorPickerPreference
      android:key="@string/logcat_setting__key_pref_debug_color"
      android:title="@string/logcat_setting__title_pref_debug_color"
      android:summary="@string/logcat_setting__summary_pref_debug_color"
      android:dialogTitle="@string/logcat_setting__title_pref_debug_color"
      android:dialogMessage="@string/logcat_setting__message_pref_debug_color"
      defaultColor="#43c949"
    />
    <jp.co.qsdn.android.qlogger.view.prefs.ColorPickerPreference
      android:key="@string/logcat_setting__key_pref_verbose_color"
      android:title="@string/logcat_setting__title_pref_verbose_color"
      android:summary="@string/logcat_setting__summary_pref_verbose_color"
      android:dialogTitle="@string/logcat_setting__title_pref_verbose_color"
      android:dialogMessage="@string/logcat_setting__message_pref_verbose_color"
      defaultColor="#c94943"
    />
  </PreferenceCategory>
</PreferenceScreen>
