<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="@dimen/height_of_footer_bar"
  android:paddingLeft="5dip"
  android:paddingRight="5dip"
  style="@style/CustomWindowTitleBackground"
  >
  <LinearLayout
    android:id="@+id/action_bar_prev"
    android:onClick="gotoPrev"
    style="@style/FooterBarLinearLayout">
    <TextView
      android:id="@+id/action_bar_prev_textview"
      android:gravity="center"
      android:text="@string/menu_prev"
      android:drawableTop="@drawable/action_bar_prev"
      style="@style/FooterBarNavigation" />
  </LinearLayout>
  <LinearLayout
    android:id="@+id/action_bar_next"
    android:onClick="gotoNext"
    style="@style/FooterBarLinearLayout">
    <TextView
      android:id="@+id/action_bar_next_textview"
      android:gravity="center"
      android:text="@string/menu_next"
      android:drawableTop="@drawable/action_bar_next"
      style="@style/FooterBarNavigation" />
  </LinearLayout>
  <LinearLayout
    android:id="@+id/action_bar_clear"
    android:onClick="gotoClear"
    style="@style/FooterBarLinearLayout">
    <TextView
      android:id="@+id/action_bar_clear_textview"
      android:gravity="center"
      android:text="@string/menu_clear"
      android:drawableTop="@drawable/action_bar_clear"
      style="@style/FooterBarNavigation" />
  </LinearLayout>
  <LinearLayout
    android:id="@+id/action_bar_send"
    android:onClick="gotoSend"
    style="@style/FooterBarLinearLayout">
    <TextView
      android:id="@+id/action_bar_send_textview"
      android:gravity="center"
      android:text="@string/menu_send"
      android:drawableTop="@drawable/action_bar_send"
      style="@style/FooterBarNavigation" />
  </LinearLayout>
  <LinearLayout
    android:id="@+id/action_bar_setting"
    android:onClick="gotoSetting"
    style="@style/FooterBarLinearLayout">
    <TextView
      android:id="@+id/action_bar_setting_textview"
      android:gravity="center"
      android:text="@string/menu_setting"
      android:drawableTop="@drawable/action_bar_setting"
      style="@style/FooterBarNavigation" />
  </LinearLayout>
</LinearLayout>
