<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  <LinearLayout
    android:layout_width="fill_parent"
    android:gravity="center_horizontal"
    android:paddingTop="10dip" 
    android:layout_height="@dimen/height_of_about_header">
    <ImageView 
      android:adjustViewBounds="true"
      android:cropToPadding="true"
      android:layout_width="0dip"
      android:layout_weight="0.33"
      android:layout_height="fill_parent"
      android:scaleType="center"
      android:src="@drawable/icon" />
    <LinearLayout 
      android:layout_width="0dip"
      android:layout_weight="0.66"
      android:layout_height="fill_parent"
      android:gravity="center"
      android:orientation="vertical">
      <TextView
        android:id="@+id/about_text1"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/app_name" />
      <TextView
        android:id="@+id/about_text2"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/version" />
      <TextView
        android:id="@+id/about_text3"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/copyright" />
    </LinearLayout>
  </LinearLayout>
  <ScrollView
    android:id="@+id/ScrollView"
    android:layout_weight="1"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
      <TextView
        android:id="@+id/about_text4"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/about__description" />
  </ScrollView>
  <Button 
    android:id="@+id/about__button_ok"
    android:layout_width="fill_parent"
    android:text="@string/about__button_ok"
    android:layout_height="wrap_content" />
</LinearLayout>
