<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >
  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    >
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      >
      <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFF5E1B5"
        >
        <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/errorlog_detail__label_of_timestamp"
          android:layout_gravity="left"
          android:layout_marginLeft="10dip"
          android:layout_marginBottom="2dip"
          android:background="#FFFFFFFF"
          style="@style/text_bold"
          />
      </LinearLayout>
      <TextView
        android:id="@+id/timestamp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        style="@style/text_sub"
        />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFF5E1B5"
        >
        <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/errorlog_detail__label_of_tag"
          android:layout_gravity="left"
          android:layout_marginLeft="10dip"
          android:layout_marginBottom="2dip"
          android:background="#FFFFFFFF"
          style="@style/text_bold"
          />
      </LinearLayout>
      <TextView
        android:id="@+id/tag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        style="@style/text_sub"
        />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFF5E1B5"
        >
        <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/errorlog_detail__label_of_message"
          android:layout_gravity="left"
          android:layout_marginLeft="10dip"
          android:layout_marginBottom="2dip"
          android:background="#FFFFFFFF"
          style="@style/text_bold"
          />
      </LinearLayout>
      <TextView
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        style="@style/text_sub"
        />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFF5E1B5"
        >
        <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/errorlog_detail__label_of_stacktrace"
          android:layout_gravity="left"
          android:layout_marginLeft="10dip"
          android:layout_marginBottom="2dip"
          android:background="#FFFFFFFF"
          style="@style/text_bold"
          />
      </LinearLayout>
      <TextView
        android:id="@+id/stacktrace"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        style="@style/text_sub"
        />
    </LinearLayout>
  </ScrollView>
  <include layout="@layout/errorlog_detail__footer_bar" />
</LinearLayout>

