<?xml version="1.0" encoding="UTF-8"?>  
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"  
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"  
  android:padding="6dip">  
  <LinearLayout
    android:id="@+id/loadavglog_row_layout"
    android:orientation="vertical"  
    android:layout_width="fill_parent"
    android:layout_height="@dimen/height_of_memutilizationlog_list"
    >
    <TextView
      android:id="@+id/timestamp" 
      android:layout_width="fill_parent"  
      android:layout_height="wrap_content"
      android:singleLine="true" 
      android:ellipsize="marquee"
      style="@style/text_bold"
      />  
    <LinearLayout
      android:orientation="horizontal"  
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      >
      <LinearLayout
        android:orientation="vertical"  
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"  
        >
        <TextView
          android:id="@+id/title_total"  
          android:layout_width="fill_parent"  
          android:layout_height="wrap_content" 
          android:singleLine="true" 
          android:ellipsize="marquee"
          android:text="@string/memutilizationlog__row_total"
          style="@style/text_bold"
          />  
        <TextView
          android:id="@+id/total"  
          android:layout_width="fill_parent"  
          android:layout_height="wrap_content" 
          android:singleLine="true" 
          android:ellipsize="marquee"
          style="@style/text_sub"
          />  
      </LinearLayout>
      <LinearLayout
        android:orientation="vertical"  
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"  
        >
        <TextView
          android:id="@+id/title_free"  
          android:layout_width="fill_parent"  
          android:layout_height="wrap_content" 
          android:singleLine="true" 
          android:ellipsize="marquee"
          android:text="@string/memutilizationlog__row_free"
          style="@style/text_bold"
          />  
        <TextView
          android:id="@+id/free"  
          android:layout_width="fill_parent"  
          android:layout_height="wrap_content" 
          android:singleLine="true" 
          android:ellipsize="marquee"
          style="@style/text_sub"
          />  
      </LinearLayout>
      <LinearLayout
        android:orientation="vertical"  
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"  
        >
        <TextView
          android:id="@+id/title_cache"  
          android:layout_width="fill_parent"  
          android:layout_height="wrap_content" 
          android:singleLine="true" 
          android:ellipsize="marquee"
          android:text="@string/memutilizationlog__row_cache"
          style="@style/text_bold"
          />  
        <TextView
          android:id="@+id/cache"  
          android:layout_width="fill_parent"  
          android:layout_height="wrap_content" 
          android:singleLine="true" 
          android:ellipsize="marquee"
          style="@style/text_sub"
          />  
      </LinearLayout>
    </LinearLayout>
  </LinearLayout>
</LinearLayout>  
